Include JigsawBuilder generated Bach.java